# melbourne-liveability

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: config.yaml
dashboard/: app.py  theme.py
data/sample/: melbourne_indicators.parquet  melbourne_liveability.geojson  metadata.json
scripts/: build_dataset.py  deploy_hf_space.py
src/liveability/: __init__.py  config.py
src/liveability/data/: __init__.py  boundaries.py  indicators.py  pois.py
src/liveability/features/: __init__.py  dimensions.py
src/liveability/scoring/: __init__.py  index.py
src/liveability/viz/: __init__.py  choropleth.py
tests/: test_boundaries.py  test_dimensions.py  test_scoring.py
