[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liveability"
version = "0.1.0"
description = "Melbourne suburb liveability scoring: geospatial multi-source data fusion, a PCA-weighted composite index, and an interactive Folium choropleth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sanny Un Sowadh Wamik" }]
keywords = ["geospatial", "geopandas", "folium", "pca", "liveability", "melbourne", "choropleth"]

dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "pyarrow>=15",
  "pyyaml>=6",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyogrio>=0.7",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
viz = ["folium>=0.16", "mapclassify>=2.6", "branca>=0.7"]
app = ["streamlit>=1.50", "streamlit-folium>=0.21", "plotly>=5.20"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "mypy>=1.10", "types-PyYAML", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/liveability"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"dashboard/app.py" = ["E402"]
"dashboard/theme.py" = ["E501"]  # long CSS lines can't wrap
"conftest.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
